2006-04-08  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev 04153] NEXT_LINK error
	* anchor.c, filc.c, fm.h: check A tag in HTMLlineproc2body().

2006-04-08  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev 04152] [PATCH] Add more explanation for the usage of the option setting panel.
	* doc(-jp)/FAQ.html, doc-jp/MANUAL.html: add explanations for .w3m/config and -o option.

2006-04-08  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev 04150] vi-prec_num
	* main.c: fix vi_prec_num switching.

2006-04-08  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev 04146] disable HAVE_LANGINFO_CODESET on cygwin
	* configure.ac: avoid AM_LANGINFO_CODESET check for Cygwin.

2006-04-07  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev-en 01060] Some patches
	* file.c, fm.h, rc.c: Introduce option show_cookie and set it TRUE by default. If set to FALSE received cookies will not be shown.
	* This fixes Debian bug #253547: w3m: Too slow receiving cookies.

2006-04-07  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev-en 01060] Some patches
	* parsetagx.c: Replace '\n' (newline) with ' ' (space) in attributes of html tags instead of ignoring them.
	* Fixes Debian bug #326167: w3m: new lines in hidden form fields are stripped

2006-04-07  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev-en 01060] Some patches
	* scripts/w3mman/w3mman*.in: Add w3mman -l <file> command line argument for viewing of local man files.
	* Fixes Debian bug #138805: w3mman -l doesn't work.

2006-04-07  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev-en 01060] Some patches
	* libwc/detect.c: Use the hint instead of US_ASCII in wc_auto_detect.
	* Fixes Debian bug #291735: w3m shouldn't "simplify" page's charset

2006-04-07  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev-en 01060] Some patches
	* Str.h, table.c: Use Strnew_charp() instead of the wrong Strnew().
	* Fixes SF bug #895351 Strnew called with argument in table.c.

2006-02-10  Dai Sato  <satodai@w3m.jp>

	* http://dog.w3m.jp/bbs/spool/until200602.html#20060210153135@keijiwan